Fixed disclaimer spacing

--- a/style.css
+++ b/style.css
@@ -267,7 +267,7 @@ input[type=number] {
     position: absolute;
     width: 90%;
     word-wrap: break-word;
-    top: 53rem;
+    top: 46rem;
     left: 2rem;
     line-height: 1.6;
 }
